After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 664181 - Gedit shouldn't add a recently used item on a non-existing file
Gedit shouldn't add a recently used item on a non-existing file
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
3.13.x
Other Linux
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2011-11-16 10:00 UTC by Julien Olivier
Modified: 2014-08-13 14:53 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Julien Olivier 2011-11-16 10:00:57 UTC
If you launch gedit with a non-existing file as a parameter (for example "gedit /tmp/test" when /tmp/test doesn't exist), gedit starts with an empty file and only creates it when you save the file. This is logical.

But what is wrong is that gedit also adds the not-yet-created file to the recently used items. For example, after launching "gedit /tmp/test", I can see that /tmp/test has been added to ~/.local/share/recently-used.xbel, while /tmp/test still doesn't exist (and might never exist if I don't save it).

So, to fix this, gedit should simply add a file to the recent items only when successfully opening an existing file or successfully saving a file.
Comment 1 Sébastien Wilmet 2014-08-12 21:11:52 UTC
I confirm this bug, it still happens with gedit 3.13.