tab: don't add a recently used item on a non-existing file

Thanks to Julien Olivier for the bug report.

https://bugzilla.gnome.org/show_bug.cgi?id=664181